# claude-landline

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
deploy/: com.example.landline.plist  com.landline.daemon-watchdog.plist  com.landline.telegram-daemon.plist  landline.example.json  restart.sh  watchdog.sh
docs/: ARCHITECTURE.md  SETUP.md
landline/: __init__.py  __main__.py  batch_classifier.py  claude.py  claude_dispatch.py  client.py  commands.py  config.py  document_handler.py  guard.py  html_chunker.py  image_cache.py  inject.py  lock.py  notifications.py  orchestrator.py  outbound_spool.py  persistent_claude.py  photo_handler.py  poller.py  reactions.py  security.py  sender_registry.py  state.py  stream_pump.py  stream_sender.py  streaming.py  telegram_download.py  telegram_fmt.py  telegram_transport.py  tool_status.py  types.py  usage_stats.py  voice_handler.py  voice_transcribe.py
landline/claude/: __init__.py  dispatch.py  failure_tracker.py  pause_flag.py  persistent.py  predicates.py  pump.py  registry.py  sender.py  streaming.py  tool_status.py  types.py
landline/media/: __init__.py  cache.py  document.py  photo.py  transcribe.py  voice.py
landline/orchestrator/: __init__.py  batch.py  daemon.py  poller_health.py  restart.py
landline/runtime/: __init__.py  batch_classifier.py  commands.py  guard.py  inject.py  lock.py  logging.py  notifications.py  security.py  state.py  usage_stats.py
landline/telegram/: __init__.py  chunker.py  download.py  fmt.py  poller.py  reactions.py  spool.py  transport.py  typing.py
landline/tests/: conftest.py  (+29 more)
