[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-landline"
version = "0.1.0"
description = "Landline — a Telegram phone line to the Claude Code agent living on your machine."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Owen Wang" }]
keywords = ["claude", "claude-code", "telegram", "bot", "daemon", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Topic :: Communications :: Chat",
]
# Zero runtime dependencies — stdlib only, by design.
dependencies = []

[project.urls]
Homepage = "https://github.com/Maninae/claude-landline"

[tool.setuptools]
packages = [
    "landline",
    "landline.orchestrator",
    "landline.claude",
    "landline.telegram",
    "landline.media",
    "landline.runtime",
]

[tool.pytest.ini_options]
testpaths = ["landline/tests"]
